# knn-algorithm

./: README.md  myplot  pyproject.toml
pacmann_knn/src/app/: predict_buy_no.py
pacmann_knn/src/models/: KNN.py
pacmann_knn/src/pseudo/: pseudocode_predict.txt  pseudocode_training.txt
pacmann_knn/src/utils/: plot.py
