[tool.poetry]
name = "pacmann-knn"
version = "0.1.0"
description = ""
authors = ["Bee Bee Wijaya <beebee.wijaya@brank.as>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
